Add Javadoc and revise AvailableCommands.java